Added : Ability to store the employeePayRoll Data into MySql

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
+# section 3: UC3 : Determine the Logging Levels, Logging to Console or File, Logging Patterns, etc
+#                  based on this application running in Dev, Staging or Production
+
 environment = PROD
 
 logging.file.name=application.log
