--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
+#   UC2 : Create a Rest Controller to demonstrate the various HTTP Methods
+#       - Before starting set application.properties to set properties of MySQL Driver and MySQL Credentials
+#       - Test the REST Calls using CURL.
+#       - At this stage the interest is to establish the connectivity and ensure data is transmitted in REST Calls
+
 spring.profiles.active=dev
 
 environment=COMMON
-
+#UC4 : Database setting as Environment Variable
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Chanti_0704
+spring.datasource.url=${sql_url}
+spring.datasource.username=${sql_username}
+spring.datasource.password=${sql_password}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
